--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
 
+    //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
 
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
